# ibis

./: .clang-format  .clangd  CMakeLists.txt
cmake/: BuildFlags.cmake  Task.cmake
inverted_index/: CMakeLists.txt
inverted_index/index/bloom_filter/: bloom_filter.cpp  bloom_filter.h
inverted_index/index/common/: merge.h  morpher.cpp  morpher.h  stream.h  types.h  utils.cpp  utils.h
inverted_index/index/invindex/: index.cpp  index.h
inverted_index/index/lsm/: lsm.cpp  lsm.h  memtable.cpp  memtable.h  sstable.cpp  sstable.h
inverted_index/index/roaring/: roaring.c  roaring_utils.h
inverted_index/index/storage/: buffer_pool.cpp  buffer_pool.h  file.h
inverted_index/strutext/encode/: utf8_generator.h
inverted_index/strutext/morpho/morpholib/: morpho.h
inverted_index/strutext/symbols/: st_generator.py
inverted_index/tests/: test_index.cpp
inverted_index/tests/docbase/large/: Albe__YAna_(si)_Litmir.net_bid218551_original_81297.txt  Artemov_Istoriya_RuLit_Me.txt  Goloshchapova_Gudbay-dieta_RuLit_Me.txt  Kamenev_Maks-Volf_2_Naemnik_RuLit_Me.txt  Kramer_My-s-istekshim-srokom-godnosti_RuLit_Me.txt  Minaev_Pacifist_RuLit_Net.txt  Neumyvakin_Endoekologiya-zdorovya_RuLit_Me.txt  Ohlobystin_Musorshchik_RuLit_Me.txt  Redakcionnaya_Kniga-o-vkusnoy-i-zdorovoy-pishche_RuLit_Me.txt  Roshchin_Veteran-osobogo-podrazdeleniya_RuLit_Me.txt  Sardarov_Muzhchina-vsegda-prav_RuLit_Me.txt  Savelev_Arkan-dlya-bukmekera_RuLit_Me.txt  garri-potter-i-dary-smerti_RuLit_Net_114101.txt  garri-potter-i-filosofskij-kamen-garri-potter-1_RuLit_Net_103173.txt  krovavaya_lichoradka.u.txt  plennitsa_vikinga.u.txt  (+1 more)
lsmtree/: .tester.json  CMakeLists.txt
lsmtree/bench/: bench.cpp
lsmtree/lsm/: lsm.cpp  lsm.h  memtable.cpp  memtable.h  sstable.cpp  sstable.h
lsmtree/lsm/bloom_filter/: bloom_filter.cpp  bloom_filter.h
lsmtree/lsm/common/: merge.h  stream.h  types.h
lsmtree/lsm/storage/: buffer_pool.cpp  buffer_pool.h  file.h
lsmtree/lsm/utils/: lsm_utils.h
lsmtree/tests/: test_lsm.cpp  test_lsm_granular.cpp  test_lsm_leveled.cpp  test_memtable.cpp  test_merge.cpp  test_sstable.cpp
strutext/: CMakeLists.txt
strutext/automata/: automata.cpp
strutext/morpho/aot/: eng_morphs.txt  eng_tabs.txt  rus_tabs.txt
strutext/symbols/test/: CMakeLists.txt
(+8 files in other folders)
